<resources>
    <string name="app_name">My Best Youtube</string>

    <!-- activity_main.xml -->
    <string name="home_button_add">+</string>
    <!-- Spinner doc : https://developer.android.com/develop/ui/views/components/spinner?hl=fr -->
    <string-array name="home_categories">
        <item>Tous</item>
        <item>Favoris</item>
        <item>Humour</item>
        <item>Science</item>
        <item>Technologie</item>
        <item>Art</item>
        <item>Autre</item>
    </string-array>

    <!-- activity_add_youtube.xml -->
    <string name="add_yt_title">Le nom de la vidéo à garder</string>
    <string name="add_yt_description">Incroyable description</string>
    <string name="add_yt_link">Lien (ex: jNQXAC9IVRw)</string>
    <string name="add_yt_favorite">Mettre en favori</string>

    <!-- TODO: Mettre des catégories plus ispirées -->
    <string-array name="add_yt_categories">
        <item>Humour</item>
        <item>Science</item>
        <item>Technologie</item>
        <item>Art</item>
        <item>Autre</item>
    </string-array>
    <string name="description_add_yt_spinner_arrow">Choisir une catégorie</string>
    <string name="add_yt_button_add">Ajouter</string>
    <string name="add_yt_button_cancel">Annuler</string>

    <!-- video_detail.xml -->
    <string name="video_detail_formatted_description">Description : %s</string>">
    <string name="video_detail_formatted_link">lien : %s</string>">
    <string name="video_detail_formatted_category">Catégorie : %s</string>">
    <string name="video_detail_button_see">Voir</string>
    <string name="video_detail_button_edit">modifier</string>
    <string name="video_detail_button_remove">Supprimer</string>
    <string name="video_detail_favorite">Favorite :"</string>
    <string name="video_detail_favorite_true">La vidéo est dans les favoris</string>
    <string name="video_detail_favorite_false">La vidéo n\'est pas dans les favoris</string>


    <!-- Messages d'interfaces -->
    <string name='add_yt_error_EditText'>Le champs n\'est pas renseigné</string>
    <string name='add_yt_error_toast'>Tous les champs doivent être renseignés</string>
    <string name='add_yt_succes_toast'>Vidéo ajoutée avec succès</string>
    <string name='edit_yt_succes_toast'>Vidéo modifiée avec succès</string>



</resources>